[tool.poetry]
name = "docker-shaper"
version = "0.1.9"
description = "Keeps Docker resources in shape based on rules and usage"
authors = ["Frans Fürst <frans.fuerst@checkmk.com>"]
repository = "https://github.com/Checkmk/checkmk-dev-tools"
readme = "Readme.md"
packages = [
  {include = "docker_shaper/**/*.py"},
  {include = "docker_shaper/static"},
  {include = "docker_shaper/templates"},
]

[tool.poetry.scripts]
docker-shaper = 'docker_shaper.cli:main'

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
aiodocker = "^0.21.0"
asyncinotify = "^4.0.1"
quart = "^0.18.4"
flask-table = "^0.5.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^1.2"
pylint = "^2.15.3"
ipython = "^8.8.0"
types-pyyaml = "^6.0.12.6"
twine = "^4.0.2"
yamllint = "^1.29.0"
pylint-per-file-ignores = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | untracked
    | \.venv
    | \.container_home_dir
    | dist
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
strict="True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    '\.container_home_dir',
]
mypy_path="typeshed"

[tool.pylint]
#ignore = [".venv", "untracked"]

# Files or directories matching the regular expression patterns are skipped. The
# regex matches against base names, not paths. The default value ignores Emacs
# file locks
#ignore-patterns = ["^\\.#"]

# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use, and will cap the count on Windows to
# avoid hangs.
jobs = 0

[tool.pylint.MASTER]
load-plugins=["pylint_per_file_ignores"]

[tool.pylint-per-file-ignores]
"pocketrockit/examples/" = "invalid-name"
