[tool.poetry]
name = "docker-shaper"
version = "0.1.23"
description = "Keeps Docker resources in shape based on rules and usage"
authors = ["Frans Fürst <frans.fuerst@checkmk.com>"]
repository = "https://github.com/Checkmk/checkmk-dev-tools"
readme = "Readme.md"
packages = [
  {include = "docker_shaper/**/*.py"},
  {include = "docker_shaper/static"},
  {include = "docker_shaper/templates"},
]

[tool.poetry.scripts]
docker-shaper = 'docker_shaper.cli:main'
dockermon = 'docker_shaper.headless_examples.dockermon:main'

[tool.poetry.dependencies]
python = "^3.10.4"
aiodocker = "^0"
python-dateutil = "^2"

quart = "^0.19"

# flask-table does not work with quart anymore, so a slightly patched version has been added
#flask-table = "^0"  # replaced
babel = "^2"
pytz = "^2023.3.post1"
apparat = "^0.0.8"
pydantic = "^2.4"
rich = "^13"
textual = "^0"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
mypy = "^1.5"
pylint = "*"
ipython = "*"
types-pyyaml = "*"
twine = "*"
yamllint = "*"
pylint-per-file-ignores = "*"
types-python-dateutil = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | untracked
    | \.venv
    | \.container_home_dir
    | dist
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
strict="True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    '\.container_home_dir',
]
mypy_path="typeshed"

[tool.pylint]
#ignore = [".venv", "untracked"]

# Files or directories matching the regular expression patterns are skipped. The
# regex matches against base names, not paths. The default value ignores Emacs
# file locks
#ignore-patterns = ["^\\.#"]

# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use, and will cap the count on Windows to
# avoid hangs.
jobs = 0

[tool.pylint.MASTER]
load-plugins=["pylint_per_file_ignores"]

[tool.pylint-per-file-ignores]
"pocketrockit/examples/" = "invalid-name"
