[tool.poetry]
name = "docker-shaper"
version = "2.0.3"
description = "Keeps Docker resources in shape based on rules and usage"
authors = ["Frans Fürst <frans.fuerst@checkmk.com>"]
repository = "https://github.com/Checkmk/checkmk-dev-tools"
readme = "Readme.md"
packages = [
  {include = "docker_shaper/**/*.py"},
]


[tool.poetry.scripts]
docker-shaper = 'docker_shaper.server:main'
dockermon = 'docker_shaper.headless_examples.dockermon:main'

[tool.poetry.dependencies]
python = "^3.10.4"
aiodocker = "^0"

pytz = "^2023.3.post1"
apparat = "^0.0.8"
pydantic = "^2.4"
rich = "^13"
textual = "^0"
psutil = "^5.9.8"

trickkiste = "^0.2"
#trickkiste  = {path = "/home/frafue/_HOME/trickkiste", develop = true}


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
pytest = "*"
mypy = "*"
pylint = "*"
ipython = "*"
twine = "*"
yamllint = "*"
pytest-cov = "*"
pylint-per-file-ignores = "*"
pre-commit = "*"
types-pyyaml = "*"
types-python-dateutil = "*"
types-psutil = "*"


# see https://pypi.org/project/poetry-bumpversion
# poetry version patch [--dry-run]
[tool.poetry_bumpversion.file."docker_shaper/__init__.py"]
[tool.poetry_bumpversion.file."docker_shaper/server.py"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | untracked
    | \.venv
    | \.container_home_dir
    | dist
  ))
'''


[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10.12"
strict="True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = []
mypy_path="typeshed"

[tool.pylint]
#ignore = [".venv", "untracked"]

# Files or directories matching the regular expression patterns are skipped. The
# regex matches against base names, not paths. The default value ignores Emacs
# file locks
#ignore-patterns = ["^\\.#"]

# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use, and will cap the count on Windows to
# avoid hangs.
jobs = 0

